Minor bug fixes when users try to add/delete all contacts.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -171,15 +171,15 @@
     <!-- Uses permission for the application -->
     <uses-permission android:name="android.permission.READ_CONTACTS" />        
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.MODIFY_PHONE_STATE" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />    
+    <uses-permission android:name="android.permission.MODIFY_PHONE_STATE" />      
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />    
         
     <!-- <uses-permission android:name="android.permission.READ_SMS" />
-    <uses-permission android:name="android.permission.RECEIVE_SMS" /> -->
+    <uses-permission android:name="android.permission.RECEIVE_SMS" /> 
+    <uses-permission android:name="android.permission.CALL_PHONE" />  -->
     
     <permission 
     	android:name="es.cesar.quitesleep.permission.SENT_SMS_ACTION"        
