removed od property file

--- a/quitesleep/.classpath
+++ b/quitesleep/.classpath
@@ -8,5 +8,5 @@
 	<classpathentry kind="lib" path="lib/db4o-7.12.132.14217-core-java5.jar"/>
 	<classpathentry kind="lib" path="lib/mail.jar"/>
 	<classpathentry kind="lib" path="lib/db4o-7.12.132.14217-cs-java5.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
