--- a/quitesleep/.project
+++ b/quitesleep/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>QuiteSleep</name>
+	<name>quitesleep</name>
 	<comment></comment>
 	<projects>
 	</projects>
