--- a/quitesleep_v3_branch/.classpath
+++ b/quitesleep_v3_branch/.classpath
@@ -3,11 +3,12 @@
 	<classpathentry exported="true" kind="lib" path="lib/db4o-7.12.132.14217-core-java5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/db4o-7.12.132.14217-cs-java5.jar"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="src" path="res"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="lib" path="lib/activation.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/additionnal.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mail.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
