--- a/quitesleep_v3_branch/project.properties
+++ b/quitesleep_v3_branch/project.properties
@@ -15,4 +15,4 @@ split.density=false
 # Project target.
 target=android-15
 android.library.reference.1=../../checkyouritems/actionBarSherlock
-android.library.reference.2=../com_viewpagerindicator
+android.library.reference.2=../../com_viewpagerindicator
