--- a/quitesleep_v3_branch/AndroidManifest.xml
+++ b/quitesleep_v3_branch/AndroidManifest.xml
@@ -72,33 +72,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-                
-        <!-- Sub Activity that manage the AddContacts process -->
-        <activity android:name=".ui.activities.AddBanned" />        
-        
-        <!-- Sub Activity that manage the ViewContacts process -->
-        <activity android:name=".ui.activities.DeleteBanned" />
-        
-        <!-- Sub Activity for manage other incoming calls -->
+                                           
+        <!-- Activity for manage other incoming calls -->
         <activity android:name=".ui.activities.BlockCallsActivity" />
         
-        <!-- Sub Activity that manage all sms settings, text, and activation -->
+        <!--Activity that manage all sms settings, text, and activation -->
         <activity 
         	android:name=".ui.activities.SmsSettings" 
         	android:windowSoftInputMode="stateHidden"	/>
         
-        <!-- Sub Activity that manage all mail settings, account, text, and activation -->
+        <!--Activity that manage all mail settings, account, text, and activation -->
         <activity 
         	android:name=".ui.activities.MailSettings" 
         	android:windowSoftInputMode="stateHidden"/>
         
-        <!-- Sub Activity that show all phone and mails from one contact, and the
+        <activity android:name=".ui.activities.ListActivityHolder" />
+        
+        <!--Activity that show all phone and mails from one contact, and the
         user must be choose or not any for send message when incoming call arrive and
         the mobile not sound. This activity also added to the banned list -->
         <activity android:name=".ui.activities.ContactDetails" />
         
-        <!-- Sub Activiy that show all phone and mails from one banned contact, 
+        <!--Activiy that show all phone and mails from one banned contact, 
         and the user can choose or not any and modify the previous selection
         for all of this. This activity also remove the contact from the banned list -->
         <activity android:name=".ui.activities.EditContact" />
