*Fixed project properties

--- a/quitesleep3/project.properties
+++ b/quitesleep3/project.properties
@@ -15,4 +15,4 @@ split.density=false
 # Project target.
 target=android-15
 android.library.reference.1=../com_viewpagerindicator
-android.library.reference.2=../com_actionbarsherlock
+android.library.reference.2=../../checkyouritems/actionBarSherlock
