* Claspath refactored. * Libs dir refactored

--- a/quitesleep3/project.properties
+++ b/quitesleep3/project.properties
@@ -13,6 +13,6 @@
 # Indicates whether an apk should be generated for each density.
 split.density=false
 # Project target.
-target=android-15
+target=android-17
 android.library.reference.1=../com_viewpagerindicator
-android.library.reference.2=../../checkyouritems/actionBarSherlock
+android.library.reference.2=../com_actionbarsherlock
